# Hackathon_OpenEnv

./: Dockerfile  README.md  User_Manual.md  __init__.py  baseline_results.json  client.py  fix_imports.py  grader.py  inference.py  models.py  openenv.yaml  pipeline.py  pyproject.toml  requirements.txt
server/: EDA_OpenEnv_environment.py  app.py
tools/: eda_tools.py
